sam-internal/k8s-in/service-mesh/istio-ship-out/istio-ingressgateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
  name: istio-ingressgateway
  namespace: mesh-control-plane
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        madkub.sam.sfdc.net/allcerts: "{\n \"certreqs\": [\n  {\n   \"cert-type\":
          \"client\",\n   \"kingdom\": \"prd\",\n   \"name\": \"tls-client-cert\",\n
          \  \"role\": \"istio-ingressgateway.mesh-control-plane\"\n  },\n  {\n   \"cert-type\":
          \"server\",\n   \"kingdom\": \"prd\",\n   \"name\": \"tls-server-cert\",\n
          \  \"role\": \"istio-ingressgateway.mesh-control-plane\",\n   \"san\": [\n
          \   \"istio-ingressgateway\",\n    \"istio-ingressgateway.mesh-control-plane\",\n
          \   \"istio-ingressgateway.mesh-control-plane.svc\",\n    \"istio-ingressgateway.mesh-control-plane.svc.prd-sam.prd.sam.sfdc.net\"\n
          \  ]\n  }\n ]\n}        "
        scheduler.alpha.kubernetes.io/critical-pod: ""
        sidecar.istio.io/inject: "false"
      labels:
        app: istio-ingressgateway
        istio: ingressgateway
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - ppc64le
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - s390x
            weight: 2
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
      containers:
      - args:
        - proxy
        - router
        - -v
        - "2"
        - --discoveryRefreshDelay
        - 1s
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --connectTimeout
        - 10s
        - --serviceCluster
        - istio-ingressgateway
        - --zipkinAddress
        - zipkin.service-mesh:9411
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        - --discoveryAddress
        - istio-pilot:8080
        image: ops0-artifactrepo2-0-prd.data.sfdc.net/docker-sfci-dev/sfci/servicemesh/istio-packaging/proxy:50d25caed2638ed29259a2be55ba2dc0ceb49b00
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 32400
        - containerPort: 15011
        - containerPort: 8060
        - containerPort: 853
        resources:
          requests:
            cpu: 10m
        volumeMounts:
        - mountPath: /etc/pki_service
          name: maddog-certs
        - mountPath: /etc/certs/root-cert.pem
          name: tls-server-cert
          subPath: ca.pem
        - mountPath: /etc/certs/cert-chain.pem
          name: tls-server-cert
          subPath: server/certificates/server.pem
        - mountPath: /etc/certs/key.pem
          name: tls-server-cert
          subPath: server/keys/server-key.pem
        - mountPath: /etc/certs/client.pem
          name: tls-client-cert
          subPath: client/certificates/client.pem
        - mountPath: /etc/certs/client-key.pem
          name: tls-client-cert
          subPath: client/keys/client-key.pem
        - mountPath: /client-cert
          name: tls-client-cert
        - mountPath: /server-cert
          name: tls-server-cert
      - args:
        - /sam/madkub-client
        - --madkub-endpoint=https://10.254.208.254:32007
        - --maddog-endpoint=https://all.pkicontroller.pki.blank.prd.prod.non-estates.sfdcsd.net:8443
        - --maddog-server-ca=/maddog-certs/ca/security-ca.pem
        - --madkub-server-ca=/maddog-certs/ca/cacerts.pem
        - --cert-folders=tls-client-cert:/client-cert/
        - --cert-folders=tls-server-cert:/server-cert/
        - --token-folder=/tokens/
        - --ca-folder=/maddog-certs/ca
        - --refresher
        - --run-init-for-refresher-mode
        image: ops0-artifactrepo2-0-prd.data.sfdc.net/docker-release-candidate/tnrp/sam/madkub:1.0.0-0000081-ddcaa288
        imagePullPolicy: IfNotPresent
        name: madkub-refresher
        resources: {}
        volumeMounts:
        - mountPath: /client-cert
          name: tls-client-cert
        - mountPath: /server-cert
          name: tls-server-cert
        - mountPath: /maddog-certs/
          name: maddog-certs
        - mountPath: /tokens
          name: tokens
      nodeSelector:
        pool: prd-sam_gater
      serviceAccountName: istio-ingressgateway-service-account
      volumes:
      - hostPath:
          path: /etc/pki_service
        name: maddog-certs
      - emptyDir:
          medium: Memory
        name: tls-client-cert
      - emptyDir:
          medium: Memory
        name: tls-server-cert
      - emptyDir:
          medium: Memory
        name: tokens
---
