sam-internal/k8s-in/service-mesh/istio-ship-out/istio-sidecar-injector-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    istio: sidecar-injector
  name: istio-sidecar-injector
  namespace: mesh-control-plane
spec:
  ports:
  - name: sidecar-injector-port
    port: 443
    targetPort: 15009
  selector:
    istio: sidecar-injector
---
