sam-internal/k8s-in/service-mesh/istio-ship-out/istio-autogenerated-k8s-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  name: istio-autogenerated-k8s-ingress
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP2
